# PocketMunster-math-sdk

./: .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint.json  .markdownlint.yml  .markdownlintignore  .prettierignore  .prettierrc.json  ARCHITECTURAL_REVIEW.md  CONTRIBUTING.md  Makefile  README.md  README_STAKE.md  README_STAKE_UPLOAD.md  STAKE_DEPLOYMENT_GUIDE.md  STAKE_ORDER_CHECKLIST.md  UPLOAD_SUMMARY.md  WORKSPACE_INTEGRATION.md  config.json  create_stake_upload_zip.js  create_stake_upload_zip.py  create_stake_upload_zip_final.py  create_stake_upload_zip_simple.py  index.html  index.json  mkdocs.yml  modern_gameboard.css  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  script.js  setup.py  stake-smoke.html  stake_api_integration.json  stake_frontend_assets.json  stake_frontend_bundle.json  stake_game_config.json  (+25 more)
.devcontainer/: devcontainer.json  postCreate.sh
.github/: copilot-instructions.md
.husky/: pre-commit
.storybook/: main.js  main.ts  manager.ts  preview.js  preview.ts
artifacts/: checksums.json  checksums.txt
assets/: theatrical_priority.txt
config/: assets_quality_policy.json
coverage/: lcov.info
dist-math/: config.json  engine.js  index.json
dist-production/: README.md  package.json
dist-run/: config.json
dist-web/: anim.js  index.html  symbols.js
docs/: ISSUE_DRAFTS.md  books_formatting.md  event_mapping.md  fe_home.md  index.md  math_home.md
frontend/: .eslintrc.js  .gitignore  README.md  jest.config.js  package.json  tsconfig.json  webpack.config.js
optimization_program/: optimization_config.py
pocket_monsters_genesis_stake_upload/: architectural-review.md  (+11 more)
pocket_monsters_genesis_stake_upload 2/: UPLOAD_INSTRUCTIONS.txt  api-spec.json  asset-manifest.json  deployment-scripts.json  index.json  manifest.json  sdk-config.json  verification-models.json
src/: main.ts  (+3 more)
(+571 files in other folders)
